adiciona lista de compras

--- a/src/app/lista-compras/lista-compras.component.html
+++ b/src/app/lista-compras/lista-compras.component.html
@@ -1,1 +1,25 @@
-<p>lista-compras works!</p>
+<div class="container">
+  <h1>Lista de compras</h1>
+  <form class="add-item-form" #frm="ngForm" (ngSubmit)="adicionarLista()">
+    <input type="text" id="item" name="item" [(ngModel)]="item" placeholder="Digite o nome do item" >
+    <button type="submit">Adicionar</button>
+    <button type="button" (click)="limparLista()">Limpar lista</button>
+  </form>
+
+  <table>
+    <thead>
+      <tr>
+        <th>#</th>
+        <th>Item</th>
+        <th></th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr *ngFor="let item of lista">
+        <td> {{item.id}} </td>
+        <td [ngClass]="{'item-riscado' : item.comprado }" > {{item.nome}} </td>
+        <td><input type="checkbox" (click)="riscarItem(item)" [checked]="item.comprado" ></td>
+      </tr>
+    </tbody>
+  </table>
+</div>
